<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_toolbar_main"
        app:title="@string/title_my_photo_diary"
        app:titleTextAppearance="@style/toolbar_title_text"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/tv_year"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="2022" />

    <TextView
        android:id="@+id/tv_month"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@id/tv_year"
        app:layout_constraintStart_toStartOf="@id/tv_year"
        app:layout_constraintTop_toBottomOf="@id/tv_year"
        tools:text="9월" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_prev_month"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_month" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_month"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_month" />

    <LinearLayout
        android:id="@+id/layoutDayOfWeek"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_month">

        <TextView
            style="@style/calender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textColor="@color/red" />

        <TextView
            style="@style/calender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textColor="@color/black" />

        <TextView
            style="@style/calender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textColor="@color/black" />

        <TextView
            style="@style/calender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textColor="@color/black" />

        <TextView
            style="@style/calender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textColor="@color/black" />

        <TextView
            style="@style/calender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textColor="@color/black" />

        <TextView
            style="@style/calender_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textColor="@color/blue_dark" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_calender"
        android:layout_width="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutDayOfWeek" />

    <View
        android:id="@+id/outline"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue_white"
        app:layout_constraintTop_toBottomOf="@id/rv_calender" />

    <TextView
        android:id="@+id/tv_selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_bold"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outline"
        tools:text="2022년 9월 20일 화요일" />

    <View
        android:id="@+id/outline2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="7dp"
        android:background="@color/blue_white"
        app:layout_constraintTop_toBottomOf="@id/tv_selected_date" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outline2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_diary"
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_light"
            android:drawableStart="@drawable/ic_baseline_add_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/btn_register_diary"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_diary_title"
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="귀여운 진주" />

        <ImageView
            android:id="@+id/iv_diary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_diary_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>