<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.settings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_keyboard_arrow_left_24_white"
        app:title="@string/title_settings"
        app:titleTextAppearance="@style/toolbar_title_text"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/tv_language"
        style="@style/font_bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/tv_language_korean"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/korean"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_language"
        app:layout_constraintTop_toBottomOf="@id/tv_language" />

    <View
        android:id="@+id/outline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue_light"
        app:layout_constraintTop_toBottomOf="@id/tv_language_korean" />

    <TextView
        android:id="@+id/tv_language_english"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/english"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_language_korean"
        app:layout_constraintTop_toBottomOf="@id/outline" />

    <View
        android:id="@+id/outline2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue_light"
        app:layout_constraintTop_toBottomOf="@id/tv_language_english" />

    <RadioGroup
        android:id="@+id/radio_group_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/tv_language_english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_language_korean">

        <RadioButton
            android:id="@+id/radio_btn_korean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp" />

        <RadioButton
            android:id="@+id/radio_btn_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>