<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.diary.DiaryActivity">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gallery_default_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iv_gallery_icon,tv_gallery" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_toolbar_diary"
        app:title="@string/title_register_new_diary"
        app:titleTextAppearance="@style/toolbar_title_text"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/tv_current_date"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="2022년 9월 15일 목요일" />

    <View
        android:id="@+id/outline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/shape_outline_radius"
        app:layout_constraintTop_toBottomOf="@id/tv_current_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_title"
        style="@style/EditTextWhiteStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            style="@style/font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/outline2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/shape_outline_radius"
        app:layout_constraintTop_toBottomOf="@id/layout_title" />

    <ImageView
        android:id="@+id/iv_diary_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_gallery_radius"
        app:layout_constraintDimensionRatio="2:0.8"
        app:layout_constraintTop_toBottomOf="@id/outline2" />

    <ImageView
        android:id="@+id/iv_gallery_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_gallery_24"
        app:layout_constraintBottom_toBottomOf="@id/iv_diary_image"
        app:layout_constraintEnd_toEndOf="@id/iv_diary_image"
        app:layout_constraintStart_toStartOf="@id/iv_diary_image"
        app:layout_constraintTop_toTopOf="@id/iv_diary_image"
        app:layout_constraintVertical_bias="0.4"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_gallery"
        style="@style/font_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/select_photo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_gallery_icon" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_content"
        style="@style/EditTextWhiteStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/iv_diary_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_content"
            style="@style/font_bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:ellipsize="end"
            android:gravity="start|top"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/font_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_save"
        android:enabled="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/save" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue_primary"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>